clusters/contabo-personal-k3s/base/argocd/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
    name: argocd
    labels:
        name: argocd
